# mopng-desktop

./: .gitee-ci.yml  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml  sync-to-gitee.yml
.planning/: STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/A-foundation-stabilization/: A-01-SUMMARY.md  A-02-SUMMARY.md  A-04-SUMMARY.md  A-CONTEXT.md  A-DISCUSSION-LOG.md
.planning/phases/B-plugin-descriptor-multi-model/: B-01-SUMMARY.md  B-02-SUMMARY.md  B-03-SUMMARY.md  B-04-SUMMARY.md  B-05-SUMMARY.md  B-06-SUMMARY.md  B-07-SUMMARY.md
.planning/seeds/: SEED-001-universal-matting-platform.md
src/: App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  entitlements.plist  target  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/birefnet/: descriptor.json
src-tauri/resources/models/rmbg-fp16/: descriptor.json
src-tauri/resources/models/rmbg-fp32/: descriptor.json
src-tauri/src/: main.rs
src-tauri/src/commands/: download.rs  export.rs  file.rs  mod.rs  process.rs
src-tauri/src/models/: birefnet.rs  descriptor.rs  mod.rs  registry.rs  rmbg.rs  session.rs
src/components/: BatchProgress.tsx  ControlPanel.tsx  DropZone.tsx  GradientAnglePicker.tsx  ModelDialog.tsx  ModelParamControl.tsx  ModelParamSection.tsx  PreviewCanvas.tsx  SettingsDialog.tsx  TaskBar.tsx  ThumbnailList.tsx  TitleBar.tsx
src/components/json-schema/: schemaToControls.ts
src/components/konva/: mattingEngine.ts  types.ts
src/components/ui/: progress.tsx  scroll-area.tsx  scrub-input.tsx
src/hooks/: useTauri.ts
src/store/: useStore.ts
src/types/: index.ts
