[package]
name = "mopng-desktop"
version = "0.1.0"
description = "MoPNG Desktop - AI Image Matting Tool"
authors = ["jkin8010"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.15"
# ort = { version = "1.16", features = ["ndarray"] } # 需要 Rust 1.88+，请手动集成
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "fs"] }
base64 = "0.22"
log = "0.4"
thiserror = "1.0"
once_cell = "1.19"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dev]
debug = 0
incremental = false
