[package]
name = "mopng-desktop"
version = "0.2.0"
description = "MoPNG Desktop - AI Image Matting Tool"
authors = ["jkin8010"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["protocol-asset"] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.4", features = ["ndarray", "coreml", "download-binaries", "copy-dylibs"] }
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "fs"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
once_cell = "1.19"
dotenvy = "0.15"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dev]
debug = 0
incremental = false
